tests/baselines/reference/recursiveComplicatedClasses(strict=true).errors.txt
recursiveComplicatedClasses.ts(2,12): error TS2322: Type 'null' is not assignable to type 'ParameterSymbol[]'.
recursiveComplicatedClasses.ts(10,12): error TS2564: Property 'bound' has no initializer and is not definitely assigned in the constructor.
recursiveComplicatedClasses.ts(13,27): error TS2454: Variable 'b' is used before being assigned.


==== recursiveComplicatedClasses.ts (3 errors) ====
    class Signature {
        public parameters: ParameterSymbol[] = null;
               ~~~~~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'ParameterSymbol[]'.
    }
    
    function aEnclosesB(a: Symbol) {
        return true;
    }
    
    class Symbol {
        public bound: boolean;
               ~~~~~
!!! error TS2564: Property 'bound' has no initializer and is not definitely assigned in the constructor.
        public visible() {
            var b: TypeSymbol;
            return aEnclosesB(b);
                              ~
!!! error TS2454: Variable 'b' is used before being assigned.
        }
    
    }
    class InferenceSymbol extends Symbol {
    }
    
    class ParameterSymbol extends InferenceSymbol {
    }
    
    class TypeSymbol extends InferenceSymbol {
    }